web server working

--- a/dl/templates/index.html
+++ b/dl/templates/index.html
@@ -8,6 +8,10 @@
 
     <br /><br />
 
+    Es un modelo de DL
+
+    <br /><br />
+
     Fixed acidity: <input type="text" id="fixedAcidity"/><br />
     Volatile acidity: <input type="text" id="volatileAcidity"/><br />
     Citric acid: <input type="text" id="citricAcid"/><br />
